force-app/main/default/objects/ffr__DataViewJoin__c/ffr__DataViewJoin__c.object-meta.xml
<CustomObject>
    <description>Stores details of a relationship join between a secondary object and the primary object in a dataview.</description>
    <label>DataView Join</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataView Joins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>