force-app/main/default/objects/ffr__DataViewJoin__c/fields/ffr__Depth__c.field-meta.xml
<CustomField>
    <fullName>ffr__Depth__c</fullName>
    <label>Depth</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>