force-app/main/default/objects/ffr__DataViewJoin__c/fields/ffr__Expanded__c.field-meta.xml
<CustomField>
    <fullName>ffr__Expanded__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Expanded</label>
    <type>Checkbox</type>
</CustomField>