force-app/main/default/objects/ffr__DataViewJoin__c/fields/ffr__Index__c.field-meta.xml
<CustomField>
    <fullName>ffr__Index__c</fullName>
    <label>Index</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>