force-app/main/default/objects/ffr__DataViewJoin__c/fields/ffr__Type__c.field-meta.xml
<CustomField>
    <fullName>ffr__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lookup</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Aggregate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>